--- a/index.html
+++ b/index.html
@@ -5,8 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizGame</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>QuizGame</h1>
+    <section id="joystick">
+        <div class="left">
+            <div class="botoes">
+                <div class="botaoMaior">
+
+                </div>
+                <div class="botaoMenor">
+                    <div class="cima1"></div>
+                    <div class="cima2"></div>
+                    <div class="cima3"></div>
+
+                    <div class="centro1"></div>
+                    <div class="centro2"></div>
+                    <div class="centro3"></div>
+
+                    <div class="baixo1"></div>
+                    <div class="baixo2"></div>
+                    <div class="baixo3"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="center">
+            <div class="tela">
+
+            </div>
+        </div>
+
+        <div class="rigth">
+            <div class="botoes">
+                <div class="botaoMenorRigth">
+                    <div class="cima1"></div>
+                    <div class="cima2"></div>
+                    <div class="cima3"></div>
+
+                    <div class="centro1"></div>
+                    <div class="centro2"></div>
+                    <div class="centro3"></div>
+
+                    <div class="baixo1"></div>
+                    <div class="baixo2"></div>
+                    <div class="baixo3"></div>
+                </div>
+
+                <div class="botaoMaior">
+
+                </div>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
