--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
         </div>
 
         <div class="center">
-            <div class="container">
 
-                <div class="animacao" id="resultados">
+            <div class="animacao" id="resultados">
+                <div class="resul">
                     <h4>Pontos:  <span id="span" name="resultado"></span></h4>
+                    <h5>Em 10 segundos será reiniciado</h5>
                 </div>
+            </div>
 
-                <div id="question-container" class="hide">
+            <div id="question-container" class="hide">
 
-                    <div class="animacao" id="divAll">
-                        <div class="title">
-                            <h2>WazlaQUIZ</h2>
-                        </div>
-                        <div class="imagem">
-                            <img src="./img/Wazla.png" alt="">
-                        </div>
+                <div class="animacao" id="divAll">
+                    <div class="title">
+                        <h2>WazlaQUIZ</h2>
                     </div>
-
-                  <div id="question"></div>
-                  <div id="answer-buttons" class="btn-grid"></div>
-
+                    <div class="imagem">
+                        <img src="./img/Wazla.png" alt="">
+                    </div>
                 </div>
-              </div>
-            </body>
+
+                <div id="question"></div>
+                <div id="answer-buttons" class="btn-grid"></div>
+            </div>
+            
         </div>
 
         <div class="rigth">
