finalizando as respostas corretas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="animacao" id="resultados">
                 <div class="resul">
-                    <h4>Pontos:  <span id="span" name="resultado"></span></h4>
+                    <h4>Pontos:  <span id="span" name="resultado"></span> / 15</h4>
                     <h5>Em 10 segundos será reiniciado</h5>
                 </div>
             </div>
