finalizando a parte visual

--- a/index.html
+++ b/index.html
@@ -34,24 +34,21 @@
 
         <div class="center">
 
+            <div class="inicio" id="divAll">
+                <div class="logo">
+                    <img src="./img/logo_wazlaquiz.png" alt="">
+                </div>
+            </div>
+
             <div class="animacao" id="resultados">
                 <div class="resul">
+                    <img src="./img/logo_wazlaquiz.png" alt="">
                     <h4>Pontos:  <span id="span" name="resultado"></span> / 15</h4>
                     <h5>Em 10 segundos será reiniciado</h5>
                 </div>
             </div>
 
             <div id="question-container" class="hide">
-
-                <div class="animacao" id="divAll">
-                    <div class="title">
-                        <h2>WazlaQUIZ</h2>
-                    </div>
-                    <div class="imagem">
-                        <img src="./img/Wazla.png" alt="">
-                    </div>
-                </div>
-
                 <div id="question"></div>
                 <div id="answer-buttons" class="btn-grid"></div>
             </div>
@@ -74,7 +71,7 @@
                     <div class="baixo3"></div>
                 </div>
 
-                <div class="botaoMaior">
+                <div class="botaoMaiorDireito">
                     <div class="controls">
                         <button id="start-btn" class="start-btn btn" onclick="meuMenuToggle()">Start</button>
                         <button id="next-btn" class="next-btn btn hide">Next</button>
