--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WazlaQUIZ</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
     
