--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                 <div class="resul">
                     <img src="./img/logo_wazlaquiz.png" alt="">
                     <h4>Pontos:  <span id="span" name="resultado"></span> / 15</h4>
-                    <h5>Em 10 segundos será reiniciado</h5>
+
+                    <img src="./audio/barara.gif" class="gif">
+
+                    <h5>Em 20 segundos será reiniciado</h5>
                 </div>
             </div>
 
@@ -81,6 +84,11 @@
             </div>
         </div>
     </section>
+
+    <audio src="./audio/acerto.mp3" id="somAcerto"></audio>
+    <audio src="./audio/erro.mp3" id="somErro"></audio>
+    <audio src="./audio/barara_join.mp3" id="aplausos"></audio>
+    <video src="./audio/barara.gif" id="barara"></video>
 </body>
 
 <script src="app.js"></script>
