--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="resul">
                     <img src="./img/logo_wazlaquiz.png" alt="">
                     <h4>Pontos:  <span id="span" name="resultado"></span> / 15</h4>
-                    <h5>Em 10 segundos será reiniciado</h5>
+                    <h5>Em 20 segundos será reiniciado</h5>
                 </div>
             </div>
 
@@ -81,6 +81,10 @@
             </div>
         </div>
     </section>
+
+    <audio src="./audio/acerto.mp3" id="somAcerto"></audio>
+    <audio src="./audio/erro.mp3" id="somErro"></audio>
+    <audio src="./audio/aplausos.mp3" id="aplausos"></audio>
 </body>
 
 <script src="app.js"></script>
