perguntas foram implementadas

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="resul">
                     <img src="./img/logo_wazlaquiz.png" alt="">
                     <h4>Pontos:  <span id="span" name="resultado"></span> / 15</h4>
-                    <h5>Em 20 segundos será reiniciado</h5>
+                    <h5>Em <span id="contRegreessiva"></span> segundos será reiniciado</h5>
                 </div>
             </div>
 
